# solana-hackathon-backend-master

./: .dockerignore  .vercelignore  Cargo.toml  DEPLOY_RAILWAY.md  Dockerfile  README.md  nixpacks.toml
migrations/: 001_initial_schema.sql  002_indexes.sql
scripts/: create_token.sh  deploy_solana_program.sh  setup_database.sh
src/: lib.rs  main.rs  state.rs
src/config/: settings.rs
src/database/: postgres.rs  redis.rs
src/handlers/: auth_handler.rs  mod.rs  paper_handler.rs  quiz_handler.rs  solana_handler.rs  token_handler.rs  upload_handler.rs
src/middleware/: auth.rs  cors.rs  logging.rs  rate_limit.rs
src/models/: mod.rs  paper.rs  quiz.rs  transaction.rs  upload.rs  user.rs
src/routes/: api.rs
src/services/: ai_client.rs  auth_service.rs  file_storage.rs  mod.rs
src/solana/: client.rs  instructions.rs  mod.rs  program.rs  token.rs
src/utils/: error.rs  mod.rs  signature.rs
tests/: auth_tests.rs  quiz_tests.rs  token_tests.rs
tests/common/: mod.rs
