[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"
authors = ["Universal Learning Platform Team"]
description = "Rust Axum backend for Web3 Universal Learning Platform"
license = "MIT"

[lib]
name = "backend_rust"
path = "src/lib.rs"

[[bin]]
name = "backend-rust"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout", "limit"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
config = "0.14"
validator = { version = "0.19", features = ["derive"] }

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros", "migrate", "bigdecimal"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

jsonwebtoken = "9"
argon2 = "0.5"
base64 = "0.22"
zeroize = "1.8"
bs58 = "0.5"
ed25519-dalek = "2"
rand = "0.8"
sha1 = "0.10"
hex = "0.4"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart"] }
solana-sdk = "2"
spl-token = "7"
spl-associated-token-account = "6"
indexmap = "=2.13.0"

[dev-dependencies]
axum-test = "15"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
mockito = "1"

[features]
default = []
